--- a/theme/template2.html
+++ b/theme/template2.html
@@ -4,7 +4,9 @@
         <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type" />
         <meta name="viewport" content="width=device-width, initial-scale=0.7" />
 		<title><%section name="pageTitle"%></title>
-        <link rel="stylesheet" href="theme/basic-gu.css" type="text/css"/><style>
+        <link rel="stylesheet" href="theme/basic-gu.css" type="text/css"/>
+        <link rel="stylesheet" href="theme/blocks.css" type="text/css" />
+        <style>
         <%section name="ExtraCSS"%>
         </style>
         <%section name="scriptIncludes"%>
